--- a/public/css/index.css
+++ b/public/css/index.css
@@ -46,11 +46,11 @@ h4,
 h5,
 h6,
 .title {
-    font-family: 'Prompt-Medium';
+    font-family: 'TH-SarabunNew';
 }
 
 .txt-title {
-    font-family: 'Prompt-Medium';
+    font-family: 'TH-SarabunNew';
 }
 
 .txt-regular {
